# hpc_finalproject

./: .gitignore  Makefile  README.md  compileScript  explicit.c  explicit.h5  g6.c  grid.c  im_valg.sh  implicit.c  implicit.h5  myscript  pj  plog  results.h5  subscript  vtk.cpp
Explicit/: README  ex_valg.sh  explicit  explicit.h5  subscript
Implicit/: README  implicit  implicit.c  implicit.h5  subscript
t100000/: explicit.h5  implicit.h5  subscript2  temperature100000.vtk
t140000/: explicit.h5  implicit  implicit.h5  subscript2  temperature140000.vtk
t180000/: explicit.h5  implicit.h5  subscript2  temperature180000.vtk
t20000/: explicit.h5  implicit.h5  subscript2  temperature20000.vtk  vtkdemo
t220000/: explicit  explicit.h5  implicit.h5  subscript2  temperature220000.vtk
t60000/: explicit.h5  implicit.h5  subscript2  temperature60000.vtk
vtk/: CMakeLists.txt  README  vtk.cpp
