SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
PROJECT(vtk-demo)

CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
find_package(HDF5 REQUIRED)
SET(VTK_DIR /work/mae-mawb/lib/VTK-8.2.0/lib64)
FIND_PACKAGE(VTK COMPONENTS vtkCommonCore vtkCommonSystem
  vtkCommonMisc vtkCommonMath vtkIOCore vtkIOLegacy vtkIOXML REQUIRED)
INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(/share/base/hdf5/1.10.4-gcc-4.8.5/include)

ADD_EXECUTABLE( vtkdemo vtk.cpp )
TARGET_LINK_LIBRARIES( vtkdemo ${VTK_LIBRARIES} ${HDF5_LIBRARIES})
# EOF
